@@ -107,7 +107,8 @@ cgrates (0.11.0~dev) UNRELEASED; urgency=medium
   * [AttributeS] Add support for adding fields from other places that event (e.g. Resource.TotalUsage, Stat.MetricName, Account.Balance)
   * [EEs] Empty fields in exporter config will export the full event for the exporters that use json format
   * [DynamicDP] Add support for *libphonenumber prefix
-  * [Templates] Added new dataconverter: *unixtime
+  * [Templates] Added new data converter: *unixtime
+  * [ActionsS] Add prefix *req to cdrLog action to uniformize
   
  -- DanB <danb@cgrates.org>  Wed, 19 Feb 2020 13:25:52 +0200
 
